# escriptorium-collate

./: .gitignore  .pypirc  Dockerfile  LICENSE.txt  README.md  pyproject.toml  setup.py
escriptorium_collate/: __about__.py  collate.py  transcription_layers.py
escriptorium_collate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/escriptorium_collate/: __about__.py  __init__.py  collate.py  transcription_layers.py
