[tool.poetry]
name = "escriptorium-collate"
version = "0.1.13"
description = "A Python library for collating eScriptorium documents."
authors = ["Osama Eshera <osama.eshera@gmail.com>"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.poetry.dependencies]
python = "^3.8"
# escriptorium-connector = "*"
minineedle = "*"
nltk = "*"
pydantic = "*"
python-dotenv = "*"
importlib-resources = "^6.4.2"
requests = "^2.32.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escriptorium-collate"
dynamic = ["version"]
description = "A Python library for collating eScriptorium documents."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = []
authors = [
  { name = "Osama Eshera", email = "osama.eshera@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "escriptorium-connector",
  "minineedle",
  "nltk",
  "pydantic",
  "python-dotenv"
]

[project.urls]
Documentation = "https://github.com/oeshera/escriptorium-collate#readme"
Issues = "https://github.com/oeshera/escriptorium-collate/issues"
Source = "https://github.com/oeshera/escriptorium-collate"

[tool.hatch.version]
path = "src/escriptorium_collate/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/escriptorium_collate tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["escriptorium_collate"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["escriptorium_collate", "tests"]
branch = true
parallel = true
omit = [
  "src/escriptorium_collate/__about__.py",
]

[tool.coverage.paths]
escriptorium_collate = ["src/escriptorium_collate", "*/escriptorium-collate/src/escriptorium_collate"]
tests = ["tests", "*/escriptorium-collate/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
